Fix drawer layout (#2166)
* Improve metrics table layout

* Improve responsiveness

* Fix svg alignment

* Add drawer background and align icons + text

* Add spacing between list items

* Fix header font size and list spacing on Tests tab

* Remove leftover bootstrap classes

* Fix indentation

* Fix drawer overflow when list is too long

* Fix side scrolling

* Fix lay-out mutant drawer

* Fix some minor issues in tests

--- a/packages/elements/src/components/drawer/drawer.component.scss
+++ b/packages/elements/src/components/drawer/drawer.component.scss
@@ -30,6 +30,16 @@ header {
 }
 :host([mode='open']) {
   height: 50%;
+
+  .scrollable{
+    overflow-y: auto;
+    overflow-x: none;
+    height: 100%;
+  }
+}
+
+.drawer-list{
+  width: calc(100% - 32px);
 }
 
 .summary {
